<resources>
    <string name="app_name">MyNote</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_note_details">NoteDetails</string>
    <string name="title_activity_new_note">NewNote</string>
    <string name="instructions">Place finger on sensor to verify identity.</string>
    <string name="auth">Unlock</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_new_account">Create New Account</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_address">Email Address</string>
    <string name="full_name">Full Name</string>
    <string name="reset">Reset</string>
</resources>
